--- a/sections/instagram-customize.liquid
+++ b/sections/instagram-customize.liquid
@@ -1,9 +1,9 @@
 <!-- instagram-customize.liquid -->
 <div class="customstyle{{ section.id }}" data-aos="{{section.settings.animation}}" >
   <div class="{{ section.settings.setwidth }}">
-    {%- render 'style-section' -%}
+    {%- include 'style-section' -%}
   <div class="section-block">
-    {%- render 'section-heading' -%}
+    {%- include 'section-heading' -%}
     <div class="instagramoff-wrapper dots-negative">
       <div class="instagramoff-slider mb-0  {% if section.settings.padding == false %} row mx-0 {% else %} row{% endif %}" id="service-list-{{ section.id }}"
            data-rows="{{section.settings.rows}}"
@@ -39,7 +39,7 @@
       </div>
     </div>
     {%- if section.blocks.size == 0 -%}
-    {%- render 'no-blocks' -%}
+    {%- include 'no-blocks' -%}
     {%- endif -%}
   </div>
 </div>
