--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -62,7 +62,7 @@
     {{section.settings.announcement}}
   </div>
   <span class="js-ab-close">
-    {%- render 'icon-close' -%}
+    {%- include 'icon-close' -%}
   </span>
 </div>
 {%- endif -%}
