--- a/sections/blog-template-3.liquid
+++ b/sections/blog-template-3.liquid
@@ -71,7 +71,7 @@
         {%- paginate blog.articles by 24 -%}
         {%- for article in blog.articles -%}
         <div class="{{section.settings.item_width}} grid-item {% for tag in article.tags %}{{ tag | camelcase }} {% endfor %}">
-          {%- render 'blog-card' -%}
+          {%- include 'blog-card' -%}
         </div>
         {%- endfor -%}
       </div>
@@ -83,7 +83,7 @@
       {%- endpaginate -%}
     </div>
     {%- if section.settings.sidebar_enable -%}
-    {%- render 'blogSidebar' -%}
+    {%- include 'blogSidebar' -%}
     {%- endif -%}
   </div>
 </div>
