--- a/sections/carousel-special.liquid
+++ b/sections/carousel-special.liquid
@@ -16,7 +16,7 @@
 }
 </style>
 <div class="customstyle{{ section.id }} position-relative">
-    {%- render 'style-section' -%}
+    {%- include 'style-section' -%}
   <div class="full">
     <div class="section-block">
       <div class="row">
@@ -84,7 +84,7 @@
       {%- endif -%}
   
       {%- if section.blocks.size == 0 -%}
-      {%- render 'no-blocks' -%}
+      {%- include 'no-blocks' -%}
       {%- endif -%}
     </div>
   </div>
