--- a/sections/collection-list-style.liquid
+++ b/sections/collection-list-style.liquid
@@ -1,7 +1,7 @@
 
 <!-- collection list style -->
 <div class="customstyle{{ section.id }}" data-aos="{{section.settings.animation}}" >
-    {%- render 'style-section' -%}
+    {%- include 'style-section' -%}
     <div class="block-section bgcollection-{{section.id}}" {%- if section.settings.custom_space != blank -%} style="{{ section.settings.custom_space }};background-color: {{section.settings.bg_section }}" {%- endif -%} data-section-type="bgcollection" data-section-id="{{ section.id }}">
     <div class="block_content bgcollection-wrapper">
         {%- case section.settings.grid -%}
@@ -25,7 +25,7 @@
                   {%- assign img_url = '' -%}
               {%- endif -%}
               <div class=" {{ grid_item_width }} colgrid-col" >
-                  <a class="colgrid__box lazyload h-100 colgrid__box-{{block.id}} " href="{%- if collection.empty? -%}#{%- else -%}{{ collection.url }}{%- endif -%}" data-index="{{ forloop.index }}" data-bgset="{% render 'bgset', image: block.settings.image %}"
+                  <a class="colgrid__box lazyload h-100 colgrid__box-{{block.id}} " href="{%- if collection.empty? -%}#{%- else -%}{{ collection.url }}{%- endif -%}" data-index="{{ forloop.index }}" data-bgset="{% include 'bgset', image: block.settings.image %}"
           data-sizes="auto" data-src="background-image: url({{ img_url }})" data-index="{{ forloop.index }}" >
                     <div class="d-flex align-items-start flex-column h-100 colgrid__boxtop">
                       <div class="mb-auto">
@@ -64,14 +64,14 @@
             {%- else -%}
                 {%- assign img_url = '' -%}
             {%- endif -%}
-        <div class="colgrid__bg--full lazyload" data-bgset="{% render 'bgset', image: block.settings.image %}"
+        <div class="colgrid__bg--full lazyload" data-bgset="{% include 'bgset', image: block.settings.image %}"
         data-sizes="auto" data-src="background-image: url({{ img_url }})" data-index="{{ forloop.index }}"></div>
         {%- endfor -%}
         </div>
         </div>
 
         {%- if section.blocks.size == 0 -%}
-        {%- render 'no-blocks' -%}
+        {%- include 'no-blocks' -%}
         {%- endif -%}
     </div>
     </div>
