--- a/sections/collection-template-1.liquid
+++ b/sections/collection-template-1.liquid
@@ -168,7 +168,7 @@
     {%- if section.settings.enable_sidebar -%}
     <div class="{{section.settings.sidebar_col}} col-12 js-sidebar">
       <div class="sidebar collection-sidebar js-stick-parent">
-        {%- render 'sidebar' -%}
+        {%- include 'sidebar' -%}
       </div>
     </div>
     {%- endif -%}
@@ -191,7 +191,7 @@
             {%- if section.settings.enable_sidebar -%}
             <div class="col col-3 col-left d-lg-none">
               <span class="js-toggle-filter d-flex align-items-center px-3">
-                {%- render 'icon-sliders' -%}
+                {%- include 'icon-sliders' -%}
                 <span class="ml-2">{{'collections.general.filter' | t}}</span>
               </span>
             </div>
@@ -204,19 +204,19 @@
               </div>
             </div>
             <div class="col col-right">
-              {%- render 'collection-sortby' -%}
+              {%- include 'collection-sortby' -%}
             </div>
           </div>
         </div>
         <div id="js-product-ajax"><!-- ONLY HAVE LIST OF PRODUCTS AND PAGINATION TO LOAD AJAX -->
-        {%- render 'current-constraint' -%}
+        {%- include 'current-constraint' -%}
           <div class="row">
             {%- for product in collection.products -%}
             <div class="{{gridProduct}}">
-              {%- render 'product-card', product: product -%}
+              {%- include 'product-card', product: product -%}
             </div>
             {%- else -%}
-            {%- render 'collection-blank' -%}
+            {%- include 'collection-blank' -%}
             {%- endfor -%}
           </div>
           {%- if paginate.pages > 1 -%}
@@ -228,7 +228,7 @@
       </div>
     </div>
   </div>
-  {%- render 'coupon_code' -%}
+  {%- include 'coupon_code' -%}
 </div>
 {%- endpaginate -%}
 
