--- a/sections/faq-accordion.liquid
+++ b/sections/faq-accordion.liquid
@@ -52,12 +52,12 @@
     }
 </style>
   <div class="customstyle{{ section.id }} {% if section.settings.image_bg != blank %} lazyload {% endif %}" data-aos="{{section.settings.animation}}"  
-  style="{% if section.settings.image_bg != blank %}background-image:url({%- render 'srcBlank' -%}){% endif %}"
+  style="{% if section.settings.image_bg != blank %}background-image:url({%- include 'srcBlank' -%}){% endif %}"
   data-bg="{{ section.settings.image_bg | img_url:"1920x" }}"
   >
-  {%- render 'style-section' -%}
+  {%- include 'style-section' -%}
     <div class="{{ section.settings.setwidth }}">
-        {%- render 'section-heading' -%}
+        {%- include 'section-heading' -%}
         <div class="row {% if section.settings.e_reverse %} flex-row-reverse {% endif %}">
             <div class="{% if section.settings.e_right == false %} col-md-12 {% else %}col-md-6 {% endif %} col-12" data-aos="{{section.settings.animation}}" data-aos-duration="500">
                 {%- if section.settings.left_html != blank -%}
@@ -114,7 +114,7 @@
             {%- endif -%}
         </div>
         {%- if section.blocks.size == 0 -%}
-        {%- render 'no-blocks' -%}
+        {%- include 'no-blocks' -%}
         {%- endif -%}
     </div>
   </div>
