--- a/sections/featured-collections.liquid
+++ b/sections/featured-collections.liquid
@@ -1,9 +1,9 @@
 <!-- featured-collections.liquid -->
 <div class="customstyle{{ section.id }}"  >
-{%- render 'style-section' -%}
+{%- include 'style-section' -%}
   <div class="{{ section.settings.setwidth }}">
     <div class="section-block">
-      {%- render 'section-heading' -%}
+      {%- include 'section-heading' -%}
       <div class="collectionlist-wrapper">
         <div class="collectionlist-slider row" id="collection-list-{{ section.id }}"
             data-rows="{{section.settings.rows}}"
@@ -19,13 +19,13 @@
           <div class="col collectionlist-item carousel__slide-wrapper--{{block.id}}" {{ block.shopify_attributes }} data-aos="{{section.settings.animation}}"  data-aos-duration="1200">
             {%- assign featured_collection = collections[block.settings.collection] -%}
             {%- assign featured_image = block.settings.image -%}
-            {%- render 'collection-card' -%}
+            {%- include 'collection-card' -%}
           </div>
           {%- endfor -%}
         </div>
       </div>
       {%- if section.blocks.size == 0 -%}
-      {%- render 'no-blocks' -%}
+      {%- include 'no-blocks' -%}
       {%- endif -%}
     </div>
   </div>
