--- a/sections/featured-products-subsection.liquid
+++ b/sections/featured-products-subsection.liquid
@@ -7,7 +7,7 @@
     <div class="row">
       {% for product in collection.products limit: 4 %}
         <div class="col-md-3 col-sm-6 col-xs-12">
-          {% render 'product-card', product: product %}
+          {% include 'product-card', product: product %}
         </div>
       {% endfor %}
     </div>
