--- a/sections/footer-2.liquid
+++ b/sections/footer-2.liquid
@@ -270,22 +270,22 @@
               <ul class="list-unstyled footer-mid__info">
                 {%- if section.settings.contact_addess != blank -%}
                 <li>
-                  {%- render 'icon-home' -%}{{section.settings.contact_addess}}
+                  {%- include 'icon-home' -%}{{section.settings.contact_addess}}
                 </li>
                 {%- endif -%}
                 {%- if section.settings.contact_phone != blank -%}
                 <li>
-                  {%- render 'icon-mobile-phone' -%}{{section.settings.contact_phone}}
+                  {%- include 'icon-mobile-phone' -%}{{section.settings.contact_phone}}
                 </li>
                 {%- endif -%}
                 {%- if section.settings.contact_mail != blank -%}
                 <li>
-                  {%- render 'icon-envelope' -%}{{section.settings.contact_mail}}
+                  {%- include 'icon-envelope' -%}{{section.settings.contact_mail}}
                 </li>
                 {%- endif -%}
                 {%- if section.settings.contact_web != blank -%}
                 <li>
-                  {%- render 'icon-globe-europe' -%}{{section.settings.contact_web}}
+                  {%- include 'icon-globe-europe' -%}{{section.settings.contact_web}}
                 </li>
                 {%- endif -%}
               </ul>
@@ -320,7 +320,7 @@
           <div class="footer-mid__linklist">
             <ul>
               {%- for link in linklists[section.settings.linklist_link].links -%}
-              <li><a href="{{link.url}}" title="{% render 'processMenuTitle' with itemName:link.title %}">{% render 'processMenuTitle' with itemName:link.title %}</a></li>
+              <li><a href="{{link.url}}" title="{% include 'processMenuTitle' with itemName:link.title %}">{% include 'processMenuTitle' with itemName:link.title %}</a></li>
               {%- endfor -%}
             </ul>
           </div>
@@ -331,7 +331,7 @@
               {%- if settings.social_facebook_link != blank -%}
               <li>
                 <a href="{{ settings.social_facebook_link | escape }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Facebook' }}">
-                  {%- render 'icon-facebook' -%}
+                  {%- include 'icon-facebook' -%}
                   <span class="icon__fallback-text">Facebook</span>
                 </a>
               </li>
@@ -339,7 +339,7 @@
               {%- if settings.social_twitter_link != blank -%}
               <li>
                 <a href="{{ settings.social_twitter_link | escape }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Twitter' }}">
-                  {%- render 'icon-twitter' -%}
+                  {%- include 'icon-twitter' -%}
                   <span class="icon__fallback-text">Twitter</span>
                 </a>
               </li>
@@ -347,7 +347,7 @@
               {%- if settings.social_pinterest_link != blank -%}
               <li>
                 <a href="{{ settings.social_pinterest_link | escape }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Pinterest' }}">
-                  {%- render 'icon-pinterest' -%}
+                  {%- include 'icon-pinterest' -%}
                   <span class="icon__fallback-text">Pinterest</span>
                 </a>
               </li>
@@ -355,7 +355,7 @@
               {%- if settings.social_tumblr_link != blank -%}
               <li>
                 <a href="{{ settings.social_tumblr_link | escape }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Tumblr' }}">
-                  {%- render 'icon-tumblr' -%}
+                  {%- include 'icon-tumblr' -%}
                   <span class="icon__fallback-text">Tumblr</span>
                 </a>
               </li>
@@ -363,7 +363,7 @@
               {%- if settings.social_snapchat_link != blank -%}
               <li>
                 <a href="{{ settings.social_snapchat_link | escape }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Snapchat' }}">
-                  {%- render 'icon-snapchat' -%}
+                  {%- include 'icon-snapchat' -%}
                   <span class="icon__fallback-text">Snapchat</span>
                 </a>
               </li>
@@ -371,7 +371,7 @@
               {%- if settings.social_youtube_link != blank -%}
               <li>
                 <a href="{{ settings.social_youtube_link | escape }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'YouTube' }}">
-                  {%- render 'icon-youtube' -%}
+                  {%- include 'icon-youtube' -%}
                   <span class="icon__fallback-text">YouTube</span>
                 </a>
               </li>
@@ -379,7 +379,7 @@
               {%- if settings.social_instagram_link != blank -%}
               <li>
                 <a href="{{ settings.social_instagram_link | escape }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Instagram' }}">
-                  {%- render 'icon-instagram' -%}
+                  {%- include 'icon-instagram' -%}
                   <span class="icon__fallback-text">Instagram</span>
                 </a>
               </li>
@@ -387,7 +387,7 @@
               {%- if settings.social_vimeo_link != blank -%}
               <li>
                 <a href="{{ settings.social_vimeo_link | escape }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Vimeo' }}">
-                  {%- render 'icon-vimeo' -%}
+                  {%- include 'icon-vimeo' -%}
                   <span class="icon__fallback-text">Vimeo</span>
                 </a>
               </li>
