--- a/sections/layout-specail-1.liquid
+++ b/sections/layout-specail-1.liquid
@@ -1,9 +1,9 @@
 <!-- layout-special-1.liquid -->
 <div class="customstyle{{ section.id }} marsonry-2columns" >
-    {%- render 'style-section' -%}
+    {%- include 'style-section' -%}
     <div class="{{ section.settings.setwidth }}">
       <div class="section-block">
-        {%- render 'section-heading' -%}
+        {%- include 'section-heading' -%}
         <div class="js-masonry row" data-section-id="{{ section.id }}" data-section-type="masonries" style="opacity:0">
           <div class="grid-sizer"></div>
           {%- for block in section.blocks -%}
@@ -16,7 +16,7 @@
               {%- when 'banner' -%}
                 <figure class=" hv-image-saturate text-{{block.settings.text_align}} mb-5 pb-5">
                   {%- if block.settings.image != blank -%}
-                  <img src="{%- render 'srcBlank' -%}" class="lazyload transition img-fluid" data-src="{{block.settings.image | img_url:'960x'}}">
+                  <img src="{%- include 'srcBlank' -%}" class="lazyload transition img-fluid" data-src="{{block.settings.image | img_url:'960x'}}">
                   {%- else -%}
                   {{ 'image' | placeholder_svg_tag: 'placeholder-svg' }}
                   {%- endif -%}
