--- a/sections/line.liquid
+++ b/sections/line.liquid
@@ -5,7 +5,7 @@
     }
 </style>
 <div class="customstyle{{ section.id }}" data-aos="{{section.settings.animation}}">
-    {%- render 'style-section' -%}
+    {%- include 'style-section' -%}
     <div class="{{ section.settings.setwidth }}">
       <div class="border-top border-custom">
       </div>
