--- a/sections/lookbook-carousel2.liquid
+++ b/sections/lookbook-carousel2.liquid
@@ -1,9 +1,9 @@
 <!-- lookbook-carousel2.liquid -->
 <div class="customstyle{{ section.id }}" data-aos="{{section.settings.animation}}" >
   <div class="{{ section.settings.setwidth }}">
-    {%- render 'style-section' -%}
+    {%- include 'style-section' -%}
   <div class="section-block">
-    {%- render 'section-heading' -%}
+    {%- include 'section-heading' -%}
     <div class="lookbooks-wrapper dots-negative">
       <div class="lookbooks-slider row" id="service-list-{{ section.id }}"
            data-rows="{{section.settings.rows}}"
@@ -19,7 +19,7 @@
         <div class="col lookbooks-item carousel__slide-wrapper--{{block.id}}" {{ block.shopify_attributes }}>
           <div class="position-relative hv-image-brightness">
             {%- if block.settings.image != blank -%}
-            <img src="{%- render 'srcBlank' -%}" class="lazyload transition" data-src="{{block.settings.image | img_url : '1500x'}}" />
+            <img src="{%- include 'srcBlank' -%}" class="lazyload transition" data-src="{{block.settings.image | img_url : '1500x'}}" />
             {%- else -%}
             {{ 'image' | placeholder_svg_tag: 'placeholder-svg' }}
             {%- endif -%}
@@ -43,7 +43,7 @@
       </div>
     </div>
     {%- if section.blocks.size == 0 -%}
-    {%- render 'no-blocks' -%}
+    {%- include 'no-blocks' -%}
     {%- endif -%}
   </div>
 </div>
